<resources>
    <string name="app_name">OnlineOrdering</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Administrator</string>
    <string name="nav_header_subtitle">admin@admin.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Log out</string>

    <string name="menu_requested_orders">Requested orders</string>
    <string name="menu_arrived_orders">Arrived orders</string>
    <string name="menu_products">Products</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_product_title">"Create"</string>
    <string name="create_request_title">"New order"</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="make_as_arrived">Make as arrived</string>
    <string name="ok">Ok</string>
    <string name="create_product_name_input">Product name</string>
    <string name="create_product_description_input">Product description</string>
    <string name="create_product_price_input">Product price</string>
    <string name="quanity_placeholder">Quantity</string>
    <string name="product_name_placeholder">Product name</string>
    <string name="deadline_placeholder">Deadline</string>
    <string name="product_description_placeholder">Description</string>
    <string name="product_price_placeholder">Price</string>
</resources>