<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_requested_orders">

    <fragment
        android:id="@+id/nav_requested_orders"
        android:name="com.example.onlineordering.ui.requestedOrders.RequestedOrdersFragment"
        android:label="@string/menu_requested_orders"
        tools:layout="@layout/fragment_requested_orders" />

    <fragment
        android:id="@+id/nav_arrived_orders"
        android:name="com.example.onlineordering.ui.arrivedOrders.ArrivedOrdersFragment"
        android:label="@string/menu_arrived_orders"
        tools:layout="@layout/fragment_arrived_orders" />

    <fragment
        android:id="@+id/nav_products"
        android:name="com.example.onlineordering.ui.products.ProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_products" />
</navigation>