<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="30dp">

    <EditText
        android:id="@+id/create_product_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/create_product_name_input"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/create_product_description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/create_product_description_input"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/create_product_price_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/create_product_price_input"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/btn_dialog_cancel_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/btn_dialog_create_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_product_title"
            android:layout_margin="10dp"/>


    </LinearLayout>

</LinearLayout>