<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <EditText
        android:id="@+id/edittext_order_dialog_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/product_name_placeholder"
        android:inputType="textPersonName"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/edittext_order_dialog_product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/quanity_placeholder"
        android:inputType="text"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/edittext_order_dialog_deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/deadline_placeholder"
        android:inputType="date"
        android:layout_margin="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/btn_dialog_cancel_rorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/btn_dialog_create_rorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_product_title"
            android:layout_margin="10dp"/>


    </LinearLayout>

</LinearLayout>